<resources>

    <string name="app_name">Video_Browser</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_categorized_video_gallery">CategorizedVideoGallery</string>

    <!-- For all image descriptions -->
    <string name="no_description">No Description</string>
    
    <!-- Category default names on home activity -->
    <string name="category_txt">Category Name</string>
    
    <!-- For all video elements -->
    <string name="video_title_txt">Video Title</string>
    <string name="video_author_txt">Video Author</string>
    <string name="video_description_txt">Video Description</string>
    <string name="video_uploaded_timestamp_txt">Uploaded Time</string>
    <string name="video_view_count_txt">View Count</string>
    <string name="video_views_txt">views</string>
    <string name="by_txt">by</string>
    
    <!-- KeyFrame Activity -->
    <string name="listView_tab_txt">Listview</string>
    <string name="cross_browser_tab_txt">Cross Browser</string>
    <string name="video_time_length">Length</string>
    
    <!-- Matching keyframes -->
    <string name="matching_keyFrame_txt">Matching KeyFrames:</string>
    <string name="selected_matching_keyframe_txt">Selected KeyFrame:</string>
</resources>