<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_keyframe_area"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/button_area"
    android:layout_marginTop="10dp"
    android:background="#484848" >

    <ImageView
        android:id="@+id/video_keyframe_image"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:contentDescription="@string/no_description"
        android:paddingRight="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/video_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:background="@color/category_text_background"
        android:text="@string/video_time_length"
        android:textColor="@color/video_attributes_overlayed_text_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/video_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/video_keyframe_image"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/video_keyframe_image"
        android:maxLines="1"
        android:text="@string/video_title_txt"
        android:textColor="@color/video_attributes_overlayed_text_color"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/video_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/video_title"
        android:layout_below="@+id/video_title"
        android:layout_toRightOf="@+id/video_keyframe_image"
        android:maxLines="2"
        android:text="@string/video_description_txt"
        android:textColor="@color/video_attributes_overlayed_text_color"
        android:typeface="normal" />

    <TextView
        android:id="@+id/video_uploaded_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/video_title"
        android:layout_below="@+id/video_description"
        android:layout_toRightOf="@+id/video_keyframe_image"
        android:maxLines="2"
        android:text="@string/video_uploaded_timestamp_txt"
        android:textColor="@color/video_attributes_overlayed_text_color"
        android:typeface="normal" />

    <TextView
        android:id="@+id/upload_viewcount_divider"
        android:layout_width="2dp"
        android:layout_height="13dp"
        android:layout_below="@+id/video_description"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/video_uploaded_timestamp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_description"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/upload_viewcount_divider"
        android:maxLines="1"
        android:text="@string/video_view_count_txt"
        android:textColor="@color/video_attributes_overlayed_text_color" />

    <TextView
        android:id="@+id/by_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/video_title"
        android:layout_below="@+id/video_uploaded_timestamp"
        android:text="@string/by_txt"
        android:textColor="@color/video_attributes_overlayed_text_color" />

    <TextView
        android:id="@+id/video_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_uploaded_timestamp"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/by_txt"
        android:text="@string/video_author_txt"
        android:textColor="@color/video_attributes_overlayed_text_color" />

</RelativeLayout>