<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#8b8b83" >

    <include
        android:id="@+id/second_activity_header"
        layout="@layout/app_header_layout" />

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_activity_header"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keyframe_listview_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:background="@android:color/darker_gray"
            android:text="@string/listView_tab_txt" />

        <View
            android:id="@+id/button_divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/key_frame_crossbrowser_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@android:color/background_light"
            android:text="@string/cross_browser_tab_txt"
            android:onClick="onCrossBrowser_btn_click" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_keyframe_area"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/button_area"
        android:layout_marginTop="5dp"
        android:background="#000000" >

        <ImageView
            android:id="@+id/video_keyframe_image"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_description"
            android:paddingRight="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/video_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="90dp"
            android:background="@color/category_text_background"
            android:textColor="@color/video_attributes_overlayed_text_color"
            android:textStyle="bold"
            android:text="@string/video_time_length" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@+id/video_keyframe_image"
            android:maxLines="1"
            android:text="@string/video_title_txt"
            android:textColor="@color/video_attributes_overlayed_text_color"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/video_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/video_title"
            android:layout_below="@+id/video_title"
            android:layout_toRightOf="@+id/video_keyframe_image"
            android:maxLines="2"
            android:text="@string/video_description_txt"
            android:textColor="@color/video_attributes_overlayed_text_color"
            android:typeface="normal" />

        <TextView
            android:id="@+id/video_uploaded_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/video_title"
            android:layout_below="@+id/video_description"
            android:layout_toRightOf="@+id/video_keyframe_image"
            android:maxLines="2"
            android:text="@string/video_uploaded_timestamp_txt"
            android:textColor="@color/video_attributes_overlayed_text_color"
            android:typeface="normal"
            android:maxLength="10" />

        <TextView
            android:id="@+id/upload_viewcount_divider"
            android:layout_width="2dp"
            android:layout_height="13dp"
            android:layout_below="@+id/video_description"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/video_uploaded_timestamp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/view_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video_description"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/upload_viewcount_divider"
            android:maxLines="1"
            android:text="@string/video_view_count_txt"
            android:textColor="@color/video_attributes_overlayed_text_color" />
        
        <TextView
            android:id="@+id/views_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video_description"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/view_count"
            android:maxLines="1"
            android:text="@string/video_views_txt"
            android:textColor="@color/video_attributes_overlayed_text_color" />

        <TextView
            android:id="@+id/by_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/video_title"
            android:layout_below="@+id/video_uploaded_timestamp"
            android:text="@string/by_txt"
            android:textColor="@color/video_attributes_overlayed_text_color" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video_uploaded_timestamp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/by_txt"
            android:text="@string/video_author_txt"
            android:textColor="@color/video_attributes_overlayed_text_color" />
    </RelativeLayout>

    <ListView
        android:id="@+id/matching_keyframes_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_keyframe_area"
        android:layout_marginTop="5dp"
        android:background="@color/keyframe_listview" />

</RelativeLayout>