<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/video_image"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:contentDescription="@string/no_description"
        android:paddingRight="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/video_name"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="70dp"
        android:background="@color/video_attributes_overlayed_text_background"
        android:maxLength="17"
        android:maxLines="1"
        android:paddingLeft="1dp"
        android:text="@string/video_title_txt"
        android:textColor="@color/video_attributes_overlayed_text_color"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/video_author"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/video_name"
        android:layout_below="@+id/video_name"
        android:background="@color/video_attributes_overlayed_text_background"
        android:maxLength="17"
        android:maxLines="1"
        android:paddingLeft="1dp"
        android:text="@string/video_author_txt"
        android:textColor="@color/video_attributes_overlayed_text_color"
        android:textSize="10sp"
        android:textStyle="italic" />

</RelativeLayout>