<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cross_browser_background" >

    <include
        android:id="@+id/third_activity_header"
        layout="@layout/app_header_layout" />

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_activity_header"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/listview_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:background="@android:color/background_light"
            android:onClick="onListView_btn_click"
            android:text="@string/listView_tab_txt" />

        <View
            android:id="@+id/button_divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/crossbrowser_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@android:color/darker_gray"
            android:text="@string/cross_browser_tab_txt" />
    </LinearLayout>

    <ListView
        android:id="@+id/cross_browser_listview"
        android:layout_width="94dp"
        android:layout_height="fill_parent"
        android:layout_below="@+id/button_area"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:background="@color/cross_browser_listview_background"
        android:cacheColorHint="#00000000"
        android:paddingBottom="5dp" />

    <Gallery
        android:id="@+id/cross_browser_gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/selection_border03"
        android:layout_below="@+id/button_area"
        android:layout_toRightOf="@+id/cross_browser_listview"
        android:background="@color/cross_browser_gallery_background" />

    <TextView
        android:id="@+id/matching_keyFrame_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AA000000"
        android:layout_above="@+id/cross_browser_gallery"
        android:paddingBottom="7dp"
        android:paddingLeft="30dp"
        android:paddingRight="15dp"
        android:text="@string/matching_keyFrame_txt"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="sans" 
        android:layout_toRightOf="@+id/selection_border04"/>

    <TextView
        android:id="@+id/selection_border01"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_alignBaseline="@+id/selection_border03"
        android:background="@color/cross_browser_selection_border" />

    <TextView
        android:id="@+id/selection_border02"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_alignBottom="@+id/selection_border03"
        android:background="@color/cross_browser_selection_border" />

    <TextView
        android:id="@+id/selection_border03"
        android:layout_width="5dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_area"
        android:layout_marginTop="150dp"
        android:background="@color/cross_browser_selection_border" />

    <TextView
        android:id="@+id/selection_border04"
        android:layout_width="5dp"
        android:layout_height="72dp"
        android:layout_alignRight="@+id/cross_browser_listview"
        android:layout_below="@+id/button_area"
        android:layout_marginTop="150dp"
        android:background="@color/cross_browser_selection_border"
        android:paddingLeft="1dp" />

    <RelativeLayout
        android:id="@+id/selected_frame_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/selection_border04"
        android:layout_alignTop="@+id/selection_border02"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:background="#000000" >

        <TextView
            android:id="@+id/selected_matching_keyframe_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:background="#AA000000"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/selected_matching_keyframe_txt"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/selected_matching_keyframe"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/selected_matching_keyframe_txt"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/no_description"
            android:scaleType="fitCenter"
            android:src="@drawable/splash_screen_img" />
    </RelativeLayout>

</RelativeLayout>